# AI_solo_coder_task_B_112

./: .gitignore  CMakeLists.txt  build.bat  build.sh  docker-compose.yml  start.bat  start.sh  stop.sh
backend/: CMakeLists.txt
backend/src/: alert_engine.cpp  clickhouse_client.cpp  fading_model.cpp  http_server.cpp  logger.cpp  main.cpp  main_v2.cpp  mold_model.cpp  notification.cpp  opcua_client.cpp  thread_pool.cpp
backend/src/ml/: response_surface.cpp
backend/src/modules/: alert_broker.cpp  bayes_opt.cpp  bayes_process.cpp  cnn_matcher.cpp  config_loader.cpp  fading_predictor.cpp  mold_engine.cpp  opcua_ingest.cpp  plsr_inversion.cpp  rf_corrosion.cpp
backend/src/opcua/: session_pool.cpp
build-ctest/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-ctest/Testing/Temporary/: CTestCostData.txt
build_sim/: CMakeCache.txt
clickhouse/: init.sql  seed_data.sql
config/: config.yaml
db/: sharding.sql
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  nginx.conf
frontend/: index.html
frontend/css/: style.css
frontend/js/: CorrosionWarning.js  InkChart.js  MatchButton.js  MoldParticles.js  OptimizePanel.js  SlipModel.js  charts.js  colormap.js  instanced_particles.js  main.js  particles.js  scene3d.js  websocket.js
include/: alert_broker.h  alert_engine.h  bayes_opt.h  bayes_process.h  clickhouse_client.h  cnn_matcher.h  common.h  config_loader.h  fading_model.h  fading_predictor.h  haihunhou_export.h  http_server.h  logger.h  message_bus.h  mold_engine.h  mold_model.h  notification.h  opcua_client.h  opcua_ingest.h  plsr_inversion.h  prometheus.h  rf_corrosion.h  thread_pool.h
include/ml/: response_surface.h
include/opcua/: session_pool.h
opc_simulator/: CMakeLists.txt
opc_simulator/src/: simulator.cpp
tests/: stub_clickhouse.cpp  test_bayes_opt.cpp  test_bayes_penalty.cpp  test_cnn_matcher.cpp  test_config_loader.cpp  test_defect_fixes.cpp  test_enhanced_bayes.cpp  test_enhanced_plsr.cpp  test_enhanced_rf.cpp  test_enhanced_slip_matching.cpp  test_fading_predictor.cpp  test_message_bus.cpp  test_mold_engine.cpp  test_plsr_inversion.cpp  test_rf_corrosion.cpp  test_session_pool.cpp  test_stub.h
